# pychecksum

./: .gitignore  README.md  pyproject.toml  tasks.py
src/: clichecksum.py
src/pychecksum/: cachedchecksum.py  checksum.py
src/pychecksumtool/scripts/: clichecksum.py  clioutput.py
tests/: test_checksum.py
